--- a/index.html
+++ b/index.html
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ballantines</title>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-  <div class="wrapper">
-    
-  </div>
-  <script src="./js/index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ballantines</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="container">
+        <header class="header">
+          <div class="logo">
+            <a class="logo__link" href="#">
+              <img class="logo__img" src="./img/logo.svg" alt="Logotip" />
+            </a>
+          </div>
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__list-item">
+                <a class="menu__link" href="#">История</a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__link" href="#">Характеристики</a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__link" href="#">Магазины</a>
+              </li>
+            </ul>
+          </nav>
+        </header>
+      </div>
+    </div>
+    <script src="./js/index.js"></script>
+  </body>
 </html>
