feat: add slider

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ballantines</title>
     <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="./css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   </head>
@@ -32,8 +33,28 @@
             </ul>
           </nav>
         </header>
+        <div class="slider">
+          <div class="slider__item">
+            <h2 class="slider__item-title">Ballantine’s Finest</h2>
+            <p class="slider__item-text">Купажированный шотландский виски - лидер продаж в Европе</p>
+          </div>
+          <div class="slider__item">
+            <h2 class="slider__item-title">Ballantine’s Finest</h2>
+            <p class="slider__item-text">Купажированный шотландский виски - лидер продаж в Европе</p>
+          </div>
+          <div class="slider__item">
+            <h2 class="slider__item-title">Ballantine’s Finest</h2>
+            <p class="slider__item-text">Купажированный шотландский виски - лидер продаж в Европе</p>
+          </div>
+          <div class="slider__item">
+            <h2 class="slider__item-title">Ballantine’s Finest</h2>
+            <p class="slider__item-text">Купажированный шотландский виски - лидер продаж в Европе</p>
+          </div>
+        </div>
       </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="./js/slick.min.js"></script>
     <script src="./js/index.js"></script>
   </body>
 </html>
